--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,26 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<h1>GitHub Stats</h1>
+
+<BsNavbar
+  @type="light"
+  @backgroundColor="light"as |navbar|>
+  <div class="navbar-header">
+    {{navbar.toggle}}
+    <LinkTo @route="main" @class="navbar-brand">Projets</LinkTo>
+  </div>
+
+  <navbar.content>
+    <navbar.nav as |nav|>
+
+      <nav.item>
+        <nav.link-to @route="main">Projet 1</nav.link-to>
+      </nav.item>
+
+      <nav.item>
+        <nav.link-to @route="main">Projet 1</nav.link-to>
+      </nav.item>
+      
+    </navbar.nav>
+  </navbar.content>
+</BsNavbar>
 
 {{outlet}}
