--- a/app/components/column-issues.hbs
+++ b/app/components/column-issues.hbs
@@ -1,4 +1,4 @@
-<div class="column-issue-box">
-  <h3>{{@columnName}}</h3>
+<div class="col-sm">
+  <h4>{{@columnName}}</h4>
   <p>Issues : {{@numberOfIssues}}</p>
 </div>
