Minor UI changes :sparkles:

--- a/app/components/column-issues.hbs
+++ b/app/components/column-issues.hbs
@@ -1,4 +1,4 @@
-<div class="col-sm">
+<div class="col-sm alert alert-success">
   <h4>{{@columnName}}</h4>
   <p>Issues : {{@numberOfIssues}}</p>
 </div>
