--- a/app/components/column-issues.hbs
+++ b/app/components/column-issues.hbs
@@ -1,4 +1,15 @@
-<div class="col-sm alert alert-success">
-  <h4>{{@columnName}}</h4>
-  <p>Issues : {{@numberOfIssues}}</p>
+<div class="col-xl-3 col-md-6 mb-4">
+  <div class="card border-left-primary shadow h-100 py-2">
+	<div class="card-body">
+	  <div class="row no-gutters align-items-center">
+		<div class="col mr-2">
+		  <div class="text-xs font-weight-bold {{@titleColorClass}} text-uppercase mb-1">{{@columnName}}</div>
+		  <div class="h5 mb-0 font-weight-bold text-gray-800">{{@numberOfIssues}}</div>
+		</div>
+		<div class="col-auto">
+		  <i class="fas fa-calendar fa-2x text-gray-300"></i>
+		</div>
+	  </div>
+	</div>
+  </div>
 </div>
