--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -2,20 +2,29 @@
 <div class="container">
   <h2>Time interval</h2>
   <div class="row">
-    <div class="col-sm">
-      Start date:
-      <EmberFlatpickr
-        @defaultDate={{this.defaultDate}}
-        @onChange={{action (mut this.startDate)}}
-      />
-    </div>
-    <div class="col-sm">
-      End date:
-      <EmberFlatpickr
+  
+
+  
+  <div class="input-group col-sm">
+	  <div class="input-group-prepend">
+		<span class="input-group-text" id="basic-addon1">Start date</span>
+	  </div>
+	  <EmberFlatpickr
+			@defaultDate={{this.defaultDate}}
+			@onChange={{action (mut this.startDate)}}
+		  />
+	</div>
+	
+	  <div class="input-group col-sm">
+	  <div class="input-group-prepend">
+		<span class="input-group-text" id="basic-addon1">End date</span>
+	  </div>
+	  <EmberFlatpickr
         @defaultDate={{this.defaultDate}}
         @onChange={{action (mut this.endDate)}}
       />
-    </div>
+	</div>
+	
     <div class="col-sm">
       <button type="button" class="btn btn-primary">Search</button>
     </div>
@@ -23,13 +32,15 @@
 <hr>
   <h2>Issues per column</h2>
   <div class="row">
-    <ColumnIssues @columnName="SomeName" @numberOfIssues="150">
+    <ColumnIssues @columnName="To do" @numberOfIssues="150" @titleColorClass="text-primary">
     </ColumnIssues>
-    <ColumnIssues @columnName="SomeOtherName" @numberOfIssues="20">
+    <ColumnIssues @columnName="In progress" @numberOfIssues="20" @titleColorClass="text-success">
     </ColumnIssues>
-    <ColumnIssues @columnName="ThirdCol" @numberOfIssues="15">
+    <ColumnIssues @columnName="Review in progress" @numberOfIssues="15" @titleColorClass="text-info">
     </ColumnIssues>
-    <ColumnIssues @columnName="LastCol" @numberOfIssues="3">
+    <ColumnIssues @columnName="Reviewer approved" @numberOfIssues="3" @titleColorClass="text-secondary">
+    </ColumnIssues>
+    <ColumnIssues @columnName="Done" @numberOfIssues="3" @titleColorClass="text-warning">
     </ColumnIssues>
   </div>
   <hr>
@@ -47,13 +58,15 @@
 
   <h2>State of issues with time interval</h2>
   <div class="row">
-    <ColumnIssues @columnName="SomeName" @numberOfIssues="150">
+    <ColumnIssues @columnName="To do" @numberOfIssues="150" @titleColorClass="text-primary">
     </ColumnIssues>
-    <ColumnIssues @columnName="SomeOtherName" @numberOfIssues="20">
+    <ColumnIssues @columnName="In progress" @numberOfIssues="20" @titleColorClass="text-success">
     </ColumnIssues>
-    <ColumnIssues @columnName="ThirdCol" @numberOfIssues="15">
+    <ColumnIssues @columnName="Review in progress" @numberOfIssues="15" @titleColorClass="text-info">
     </ColumnIssues>
-    <ColumnIssues @columnName="LastCol" @numberOfIssues="3">
+    <ColumnIssues @columnName="Reviewer approved" @numberOfIssues="3" @titleColorClass="text-secondary">
+    </ColumnIssues>
+    <ColumnIssues @columnName="Done" @numberOfIssues="3" @titleColorClass="text-warning">
     </ColumnIssues>
   </div>
 </div>
