--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -1,9 +1,14 @@
 
 <div class="container">
-  <h2>Time interval</h2>
+  <h2>Search parameters</h2>
   <div class="row">
   
-
+  <div class="input-group col-sm">
+	  <div class="input-group-prepend">
+		<span class="input-group-text" id="basic-addon1">Issue ID</span>
+	  </div>
+    <input type="text">
+  </div>
   
   <div class="input-group col-sm">
 	  <div class="input-group-prepend">
@@ -32,16 +37,13 @@
 <hr>
   <h2>Issues per column</h2>
   <div class="row">
-    <ColumnIssues @columnName="To do" @numberOfIssues="150" @titleColorClass="text-primary">
-    </ColumnIssues>
-    <ColumnIssues @columnName="In progress" @numberOfIssues="20" @titleColorClass="text-success">
-    </ColumnIssues>
-    <ColumnIssues @columnName="Review in progress" @numberOfIssues="15" @titleColorClass="text-info">
-    </ColumnIssues>
-    <ColumnIssues @columnName="Reviewer approved" @numberOfIssues="3" @titleColorClass="text-secondary">
-    </ColumnIssues>
-    <ColumnIssues @columnName="Done" @numberOfIssues="3" @titleColorClass="text-warning">
-    </ColumnIssues>
+    {{#each this.model.columns as |col|}}
+      <ColumnIssues 
+        @columnName={{col.name}} 
+        @numberOfIssues={{col.issues}} 
+        @titleColorClass="text-primary">
+      </ColumnIssues>
+    {{/each}}
   </div>
   <hr>
   <h2>Process time of issues</h2>
