--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>GitHub Stats Dashboard</h1>
 
-  <BsNavbar
+  {{!-- <BsNavbar
     @type="light"
     @backgroundColor="light"as |navbar|>
     
@@ -23,7 +23,7 @@
         
       </navbar.nav>
     </navbar.content>
-  </BsNavbar>
+  </BsNavbar> --}}
   
 
   
