--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -15,7 +15,6 @@
 		<span class="input-group-text" id="basic-addon1">Start date</span>
 	  </div>
 	  <EmberFlatpickr
-			@defaultDate={{this.defaultStartDate}}
 			@onChange={{action (mut this.searchStartDate)}}
 		  />
 	</div>
@@ -25,15 +24,14 @@
 		<span class="input-group-text" id="basic-addon1">End date</span>
 	  </div>
 	  <EmberFlatpickr
-        @defaultDate={{this.defaultEndDate}}
-        @onChange={{action (mut this.endDate)}}
+        @onChange={{action (mut this.searchEndDate)}}
       />
 	</div>
 	
-    <div class="col-sm">
-      <button type="button" class="btn btn-primary">Search</button>
-    </div>
+  <div class="col-sm">
+    <button type="button" class="btn btn-primary" onclick={{action 'reloadModel'}}>Search</button>
   </div>
+</div>
 <hr>
   <h2>Issues per column</h2>
   <div class="row">
@@ -47,9 +45,6 @@
   </div>
   <hr>
   <h2>Process time of issue {{this.model.issueId}} : {{this.model.issueProcessTime}} hours</h2>
-  <hr>
-
-  <h2>Process time of completed with interval</h2>
   <hr>
 
   <h2>Number of pull requests : {{this.model.openPR}}</h2>
@@ -74,4 +69,7 @@
     <ColumnIssues @columnName="Done" @numberOfIssues="3" @titleColorClass="text-warning">
     </ColumnIssues>
   </div>
+  <hr>
+
+  <h2>Process time of completed with interval</h2>
 </div>
