--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -46,10 +46,10 @@
     {{/each}}
   </div>
   <hr>
-  <h2>Process time of issue {{this.model.issueId}} : {{this.model.issueProcessTime}} hours</h2>
+  <h2>Process time of issue with id = {{this.model.issueId}} : {{this.model.issueProcessTime}} hours</h2>
   <hr>
 
-  <h2>Process time of completed with interval</h2>
+  <h2>Process time of completed with interval <ChartistChart @type="line" @data={{this.model.chartData}} /></h2>
   <hr>
 
   <h2>Number of pull requests : {{this.model.openPR}}</h2>
