graph added for each column

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -61,6 +61,9 @@
   <h2>Number of completed issues between {{this.model.startDate}} and {{this.model.endDate}} : {{this.model.completedInterval}}</h2>
   <hr>
 
+  <h2>Number of Issues For Each Column between {{this.model.startDate}} and {{this.model.endDate}} : <ChartistChart @type="line" @options={{this.model.chartOptions}} @ratio="ct-golden-section" @updateOnData={{false}} @data={{this.model.issuesForEachColumn}} /></h2>
+  <hr>
+
   <h2>State of issues with time interval</h2>
   <div class="row">
     <ColumnIssues @columnName="To do" @numberOfIssues="150" @titleColorClass="text-primary">
