--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -15,7 +15,7 @@
 		<span class="input-group-text" id="basic-addon1">Start date</span>
 	  </div>
 	  <EmberFlatpickr
-			@onChange={{action (mut this.searchStartDate)}}
+			@onChange={{action 'setSearchStartDate'}}
 		  />
 	</div>
 	
@@ -24,7 +24,7 @@
 		<span class="input-group-text" id="basic-addon1">End date</span>
 	  </div>
 	  <EmberFlatpickr
-        @onChange={{action (mut this.searchEndDate)}}
+        @onChange={{action 'setSearchEndDate'}}
       />
 	</div>
 	
