fixed color legend

--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -73,7 +73,7 @@
 	<div style="height: 25px;width: 50px;background-color: #d70206;display:inline-block;"></div><span style="padding: 0px 10px;">To do</span>
 	<div style="height: 25px;width: 50px;background-color: #f05b4f;display:inline-block;"></div><span style="padding: 0px 10px;">In progress</span>
 	<div style="height: 25px;width: 50px;background-color: #f4c63d;display:inline-block;"></div><span style="padding: 0px 10px;">Review in progress</span>
-	<div style="height: 25px;width: 50px;background-color: #453d3f;display:inline-block;"></div><span style="padding: 0px 10px;">Reviewer approved</span>
+	<div style="height: 25px;width: 50px;background-color: #d17905;display:inline-block;"></div><span style="padding: 0px 10px;">Reviewer approved</span>
 	<div style="height: 25px;width: 50px;background-color: #453d3f;display:inline-block;"></div><span style="padding: 0px 10px;">Done</span>
   </div>
   <br/>
